<resources>
    <string name="app_name">信息查询</string>
    <string name="StuNumber">学号</string>
    <string name="Password"> 密码</string>
    <string name="StuNumberHint">请输入学号</string>
    <string name="PasswordHint"> 请输入密码</string>
    <string name="IdentifyCodeHint">请输入验证码</string>
    <string name="Login">登录</string>
    <string name="Cancel">退出</string>
    <string name="title_activity_main">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
