<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="view.Login"
    android:background="@drawable/login_background"
    android:id="@+id/myLogin"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_centerInParent="true"
        android:id="@+id/myBg"
        android:background="@drawable/border">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/left_right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/StuNumberRaw"
                android:layout_marginTop="@dimen/left_right"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/StuNumber"
                    android:text="@string/StuNumber"
                    android:layout_marginLeft="@dimen/left_right"
                    android:drawableLeft="@drawable/login_user"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:textColor="@color/cadetblue" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/StuNumberText"
                    android:hint="@string/StuNumberHint"
                    android:singleLine="true"
                    android:layout_weight="3"
                    android:textColor="@color/cadetblue"
                    android:textColorHint="@color/cadetblue"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/PasswordRaw"
                android:layout_below="@id/StuNumberRaw">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Password"
                    android:text="@string/Password"
                    android:layout_marginLeft="@dimen/left_right"
                    android:drawableLeft="@drawable/login_password"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:textColor="@color/cadetblue"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/PasswordText"
                    android:inputType="textPassword"
                    android:hint="@string/PasswordHint"
                    android:singleLine="true"
                    android:layout_weight="3"
                    android:textColor="@color/cadetblue"
                    android:textColorHint="@color/cadetblue"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Identify"
                android:layout_below="@+id/PasswordRaw">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/IdentifyCode"
                    android:layout_marginLeft="@dimen/left_right"
                    android:layout_marginRight="@dimen/left_right"
                    android:hint="@string/IdentifyCodeHint"
                    android:singleLine="true"
                    android:textColor="@color/cadetblue"
                    android:textColorHint="@color/cadetblue"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/Identify"
                android:layout_marginLeft="@dimen/left_right"
                android:layout_marginRight="@dimen/left_right"
                android:layout_marginBottom="@dimen/up_down">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"
                    android:id="@+id/Login"
                    android:layout_marginRight="@dimen/left_right"
                    android:layout_marginLeft="@dimen/left_right"
                    android:background="@drawable/border"
                    android:textColor="@color/cadetblue"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
